fix: fix mobile issue with overlapping elements

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
   }
 
 main {
-  position: relative;
+  position: sticky;
   width: 50%;
   max-width: 660px;
   background-color: var(--background);
